officially on java13 now; required an updated gradle and update to build.gradle to set up "--enable-preview" to allow the app to run.